# macrosynergy

./: .coveragerc  .gitignore  .readthedocs.yaml  .snyk  Basket_Performance.ipynb  CLAUDE.md  DQ_ErrorBase.ipynb  DQ_Simplification.ipynb  DataQuery_Simplification.ipynb  DataQuery_Time.ipynb  DataQuery_Version.ipynb  Dockerfile  JPMaQS with Seaborn.ipynb  LICENSE  MANIFEST.in  README.md  Untitled-1.ipynb  Updated_DQ.ipynb  Updated_DataQuery.ipynb  betacorrvol_report.html  corrvol_preport.html  corrvol_report.html  dq download.ipynb  dq_athena.ipynb  dq_class_in_jupyter.ipynb  dq_download.ipynb  profile_report.html  pyproject.toml  pytest.ini  requirements-min.txt  requirements-py37.txt  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: check_pr.py  check_sys_path.sh  check_versioning.py  create_min_requirements.py  gen_docs_switcher.py  generate_redirects.py  gh_api_request.py  gh_cache_api.py  new_run_notebooks.py  run_notebooks.py  setup_academy_integration_test.py
.github/workflows/: academy-integration-test.yml  apply-code-format.yml  codeql-analysis.yml  docker-ecr-push.yml  github-clear-branch-cache.yml  github-pr-release-notes.yml  github-pr-review-tests.yml  github-pr-tests.yml  github-update-cache.yml  integration-tests.yml  publish-pypi.yml  publish-test-pypi.yml  publish-to-test-pypi.yml  python-academy-tests.yml  python-integration-tests.yml  python-package-release.yml  python-package.yml  python-publish-docs.yml  python-pypi-package.yml  python-pypi-upload.yml  python-pypy-test.yml  python-test-docs.yml  python-test-pypi-package.yml  python-test-pypi-upload.yml  python-test-sphinx-build.yml  python-unit-tests-py37.yml  python-unit-tests-release.yml  python-unit-tests.yml  python-upload-docs-to-s3-test.yml  pythons-docs.yml  run-notebooks.yml  test-something.yml  testing-gh-runner.yml
docker/: Dockerfile  test.py
docker/tests/: __init__.py
docs/: build.bat  build.sh  build_examples.py  build_jpb.py  build_md.py  conf.py  docs-requirements.txt  docstr.py  format_docstrings.py  gen.py  index.rst  post_build.py  redirects.py  release_notes.py  requirements.txt  serve.bat
docs.old/: requirements.txt
docs.old/assets/: jpb-config.yml
docs.old/scripts/: build.bat  build.sh  build_jpb.py  build_md.py  post_build.py  serve.sh
docs.old/static/: 02_installation.md  03_dataquery.md  05_dev_guide.md  06_definitions.md  index.md
docs/assets/: custom_css.css  jpb-config.yml
docs/examples/: README.md  _config.yml  _toc.yml
docs/scripts/: build.bat  build.sh  build_examples.py  build_jpb.py  build_md.py  build_multiversion.py  post_build.py  release_notes.py
docs/source/: 04_academy.rst  about.rst  academy.rst  api_reference.rst  common_definitions.rst  conf.py  faqs.rst  generate_rsts.py  getting_started.rst  index.rst  macrosynergy.download.rst  macrosynergy.learning.rst  macrosynergy.management.rst  macrosynergy.panel.rst  macrosynergy.pnl.rst  macrosynergy.securities.rst  macrosynergy.signal.rst  macrosynergy.visuals.rst  macrosynergy_academy.rst  modules.rst  usage_examples.md
docs/static/: 01_context.md  02_installation.md  04_academy.md  05_dev_guide.md  06_definitions.md  index.md  index.rst  intro.md  jpb-config.yml
macrosynergy/: __init__.py  backend.py  compat.py  version.py
macrosynergy/dataquery/: README.md  __init__.py  api.py  api_old.py  auth.py  cert_auth.py  exceptions.py  framer.py  oauth.py
macrosynergy/download/: JPMaQSDownload.py  README.md  __init__.py  aws_lambda.py  common.py  constants.py  dataquery.py  dataquery_file_api.py  download.py  dq_api.py  dq_auth.py  exceptions.py  external_data_transformer.py  extra.py  fusion_interface.py  jpm_oauth.py  jpmaqs.py  local.py  multicred.py  transaction_costs.py  utils.py
macrosynergy/learning/: README.md  __init__.py  benchmarks.py  beta_estimator.py  cv_tools.py  learner.py  marketbeta.py  metrics.py  panel_time_series_split.py  panel_timeseries_split.py  prediction_tools.py  predictors.py  preds_to_pnl.py  random_effects.py  random_effects_regressor.py  signal_optimizer.py  split.py  test.py  transformers.py
macrosynergy/management/: OAuth_connection.py  README.md  __init__.py  certificate_connection.py  check_availability.py  constants.py  decorators.py  dq.py  dq_athena.py  dq_comparison.py  dq_multithreading.py  dq_simplification.py  shape_dfs.py  simulate_curran.py  simulate_quantamental_data.py  simulate_vintage_data.py  types.py  update_df.py  utils.py  validation.py
macrosynergy/panel/: Logarithmic_Insertion.py  README.md  Zero_Handler.py  Zn_Scores.py  __init__.py  adjust_weights.py  basket.py  basket_performance.py  basket_performance_class.py  category_relations.py  converge_row.py  correl_matrix.py  correlation.py  cross_asset_effects.py  dynamic_weights.py  expanding_statistics.py  extend_history.py  granger_causailty_test.py  granger_causality_test.py  granger_causality_tests.py  hedge_ratio.py  historic_vol.py  historic_volality.py  imputers.py  intertemporal_correlation.py  lincomb_adjust.py  linear_composite.py  logarithmic_insertion.py  make_blacklist.py  make_relative_category.py  make_relative_value.py  make_zn_scores.py  naive_pnls.py  panel_calculator.py  panel_calculator_alt.py  panel_calculator_alt2.py  panel_extension.py  panel_imputer.py  panel_timeseries_split.py  position_signals.py  (+9 more)
macrosynergy/pnl/: README.md  __init__.py  common.py  contract_signals.py  evaluation.py  historic_portfolio_volatility.py  multi_asset_pnl.py  multi_pnl.py  naive_pnl.py  notional_positions.py  proxy_pnl.py  proxy_pnl_calc.py  real_pnl.py  sharpe_stability_ratio.py  transaction_costs.py
macrosynergy/securities/: __init__.py  index.py  validate.py
macrosynergy/signal/: README.md  __init__.py  naive_pnl.py  signal_base.py  signal_return.py  signal_return_relations.py  target_positions.py
macrosynergy/visuals/: README.md  __init__.py  acf.py  ccf.py  common.py  correlation.py  facetplot.py  (+19 more)
notebooks/: example-notebook.ipynb
tests/: requirements-py37.txt  simulate.py  utils.py
(+789 files in other folders)
