[build-system]
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "macrosynegy"
description = "Macrosynergy Quant Research Package"
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE"}

authors = [
    {name = "Macrosynergy", email = "info@macrosynergy.com"}]

homepage = "https://www.macrosynergy.com"
repository = "https://github.com/macrosynergy/macrosynegy"
documentation = "https://docs.macrosynergy.com"

classifiers = [
"Intended Audience :: Science/Research",
"Intended Audience :: Developers",
"Programming Language :: Python",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3 :: Only",
"Topic :: Software Development",
"Topic :: Scientific/Engineering",
"Typing :: Typed",
"Operating System :: Microsoft :: Windows",
"Operating System :: POSIX",
"Operating System :: MacOS",
"Development Status :: 4 - Beta",
]
