[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macrosynergy"
description = "Macrosynergy Quant Research Package"
dynamic = ["version"]

authors = [{ name = "Macrosynergy", email = "info@macrosynergy.com" }]
readme = { file = "README.md", content-type = "text/markdown" } # file can be a list
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "seaborn>=0.13.0",
  "matplotlib>=3.6.0",
  "pandas>=1.3.5",
  "statsmodels>=0.13.2",
  "scikit-learn>=1.2.2",
  "numpy>=1.21.6,<2.0.0",
  "requests>=2.27.1",
  "tqdm>=4.62",
  "Jinja2>=2.10",
  "joblib>=1.3.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
  "Operating System :: OS Independent",
]


[project.urls]
homepage = "https://www.macrosynergy.com"
repository = "https://github.com/macrosynergy/macrosynergy/"
documentation = "https://docs.macrosynergy.com"
tracker = "https://github.com/macrosynergy/macrosynergy/issues"

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-cov>3.0.0",
  "coverage>=6.0.0",
  "pytest-xdist>=3.3.1",
  "flake8>=4.0.1",
  "parameterized>=0.9.0",
  "linearmodels>=4.28",
]
excel = ["openpyxl>=3.0.10"]
notebook = [
  "notebook>=6.0.0",
  "ipywidgets>=7.6.5",
  "ipython>=7.28.0",
  "jupyter>=1.0.0",
  "ipykernel>=6.4.1",
]
format = ["black>=22.1.0"]

docs = [
  "pydata-sphinx-theme==0.14.4",
  "Sphinx==7.1.2",
  "sphinx-autodoc-typehints==1.19.1",
  "sphinx-automodapi==0.16.0",
  "sphinx-remove-toctrees==0.0.3",
  "sphinx_design==0.5.0",
  "myst_parser==2.0.0",
  "sphinx-copybutton==0.5.0",
  "sphinxcontrib-mermaid>=0.8.0",
  "requests>=2.27.1",
  "packaging>=21.0",
]

all = [
  "openpyxl>=3.0.10",
  "notebook>=6.0.0",
  "ipywidgets>=7.6.5",
  "ipython>=7.28.0",
  "jupyter>=1.0.0",
  "ipykernel>=6.4.1",
  "black>=22.1.0",
  "pytest>=7.0.0",
  "pytest-cov>3.0.0",
  "coverage>=6.0.0",
  "pytest-xdist>=3.3.1",
  "flake8>=4.0.1",
  "parameterized>=0.9.0",
  "pydata-sphinx-theme==0.14.4",
  "Sphinx==7.1.2",
  "sphinx-autodoc-typehints==1.19.1",
  "sphinx-automodapi==0.16.0",
  "sphinx-remove-toctrees==0.0.3",
  "sphinx_design==0.5.0",
  "myst_parser==2.0.0",
  "sphinx-copybutton==0.5.0",
  "requests>=2.27.1",
  "packaging>=21.0",
]

[tool.setuptools]
platforms = ["Windows", "Linux", "Mac OS-X"]

[tool.setuptools.packages.find]
include = ["macrosynergy", "macrosynergy.*"]
exclude = ["tests", "tests.*"]
namespaces = true


[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "macrosynergy/version.py"
versionfile_build = "macrosynergy/version.py"
tag_prefix = "v"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]
exclude = '''
(
  | \.egg
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rEf -rP -n auto --durations=10 --cov=macrosynergy --verbose"
# testpaths = ['./tests/']

[tool.coverage]
source = "macrosynergy"
omit = ["test/*", "setup.py", "macrosynergy/version.py", "**/__init__.py"]

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
  "if 0:",
  "if False:",
  "if __name__ == __main__:",
]
